// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/slider/demo/basic.md correctly 1`] = `
<div>
  <div
    class="wmstool-slider"
  >
    <div
      class="wmstool-slider-rail"
    />
    <div
      class="wmstool-slider-track"
      style="visibility:visible;left:0%;width:30%"
    />
    <div
      class="wmstool-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="wmstool-slider-handle"
      role="slider"
      style="left:30%"
      tabindex="0"
    />
    <div
      class="wmstool-slider-mark"
    />
  </div>
  <div
    class="wmstool-slider"
  >
    <div
      class="wmstool-slider-rail"
    />
    <div
      class="wmstool-slider-track wmstool-slider-track-1"
      style="visibility:visible;left:20%;width:30%"
    />
    <div
      class="wmstool-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      class="wmstool-slider-handle wmstool-slider-handle-1"
      role="slider"
      style="left:20%"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="wmstool-slider-handle wmstool-slider-handle-2"
      role="slider"
      style="left:50%"
      tabindex="0"
    />
    <div
      class="wmstool-slider-mark"
    />
  </div>
  Disabled: 
  <span
    class="wmstool-switch-small wmstool-switch"
    tabindex="0"
  >
    <span
      class="wmstool-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/slider/demo/event.md correctly 1`] = `
<div>
  <div
    class="wmstool-slider"
  >
    <div
      class="wmstool-slider-rail"
    />
    <div
      class="wmstool-slider-track"
      style="visibility:visible;left:0%;width:30%"
    />
    <div
      class="wmstool-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="wmstool-slider-handle"
      role="slider"
      style="left:30%"
      tabindex="0"
    />
    <div
      class="wmstool-slider-mark"
    />
  </div>
  <div
    class="wmstool-slider"
  >
    <div
      class="wmstool-slider-rail"
    />
    <div
      class="wmstool-slider-track wmstool-slider-track-1"
      style="visibility:visible;left:20%;width:30%"
    />
    <div
      class="wmstool-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      class="wmstool-slider-handle wmstool-slider-handle-1"
      role="slider"
      style="left:20%"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="wmstool-slider-handle wmstool-slider-handle-2"
      role="slider"
      style="left:50%"
      tabindex="0"
    />
    <div
      class="wmstool-slider-mark"
    />
  </div>
</div>
`;

exports[`renders ./components/slider/demo/icon-slider.md correctly 1`] = `
<div
  class="icon-wrapper"
>
  <i
    class="anticon anticon-frown-o"
    style="color:rgba(0, 0, 0, .45)"
  />
  <div
    class="wmstool-slider"
  >
    <div
      class="wmstool-slider-rail"
    />
    <div
      class="wmstool-slider-track"
      style="visibility:visible;left:0%;width:0%"
    />
    <div
      class="wmstool-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="20"
      aria-valuemin="0"
      aria-valuenow="0"
      class="wmstool-slider-handle"
      role="slider"
      style="left:0%"
      tabindex="0"
    />
    <div
      class="wmstool-slider-mark"
    />
  </div>
  <i
    class="anticon anticon-smile-o"
    style="color:"
  />
</div>
`;

exports[`renders ./components/slider/demo/input-number.md correctly 1`] = `
<div>
  <div
    class="wmstool-row"
  >
    <div
      class="wmstool-col-12"
    >
      <div
        class="wmstool-slider"
      >
        <div
          class="wmstool-slider-rail"
        />
        <div
          class="wmstool-slider-track"
          style="visibility:visible;left:0%;width:0%"
        />
        <div
          class="wmstool-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="20"
          aria-valuemin="1"
          aria-valuenow="1"
          class="wmstool-slider-handle"
          role="slider"
          style="left:0%"
          tabindex="0"
        />
        <div
          class="wmstool-slider-mark"
        />
      </div>
    </div>
    <div
      class="wmstool-col-4"
    >
      <div
        class="wmstool-input-number"
        style="margin-left:16px"
      >
        <div
          class="wmstool-input-number-handler-wrap"
        >
          <span
            aria-disabled="false"
            aria-label="Increase Value"
            class="wmstool-input-number-handler wmstool-input-number-handler-up "
            role="button"
            unselectable="unselectable"
          >
            <span
              class="wmstool-input-number-handler-up-inner"
              unselectable="unselectable"
            />
          </span>
          <span
            aria-disabled="true"
            aria-label="Decrease Value"
            class="wmstool-input-number-handler wmstool-input-number-handler-down wmstool-input-number-handler-down-disabled"
            role="button"
            unselectable="unselectable"
          >
            <span
              class="wmstool-input-number-handler-down-inner"
              unselectable="unselectable"
            />
          </span>
        </div>
        <div
          aria-valuemax="20"
          aria-valuemin="1"
          aria-valuenow="1"
          class="wmstool-input-number-input-wrap"
          role="spinbutton"
        >
          <input
            autocomplete="off"
            class="wmstool-input-number-input"
            max="20"
            min="1"
            step="1"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row"
  >
    <div
      class="wmstool-col-12"
    >
      <div
        class="wmstool-slider"
      >
        <div
          class="wmstool-slider-rail"
        />
        <div
          class="wmstool-slider-track"
          style="visibility:visible;left:0%;width:0%"
        />
        <div
          class="wmstool-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="0"
          class="wmstool-slider-handle"
          role="slider"
          style="left:0%"
          tabindex="0"
        />
        <div
          class="wmstool-slider-mark"
        />
      </div>
    </div>
    <div
      class="wmstool-col-4"
    >
      <div
        class="wmstool-input-number"
        style="margin-left:16px"
      >
        <div
          class="wmstool-input-number-handler-wrap"
        >
          <span
            aria-disabled="false"
            aria-label="Increase Value"
            class="wmstool-input-number-handler wmstool-input-number-handler-up "
            role="button"
            unselectable="unselectable"
          >
            <span
              class="wmstool-input-number-handler-up-inner"
              unselectable="unselectable"
            />
          </span>
          <span
            aria-disabled="true"
            aria-label="Decrease Value"
            class="wmstool-input-number-handler wmstool-input-number-handler-down wmstool-input-number-handler-down-disabled"
            role="button"
            unselectable="unselectable"
          >
            <span
              class="wmstool-input-number-handler-down-inner"
              unselectable="unselectable"
            />
          </span>
        </div>
        <div
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="0"
          class="wmstool-input-number-input-wrap"
          role="spinbutton"
        >
          <input
            autocomplete="off"
            class="wmstool-input-number-input"
            max="1"
            min="0"
            step="0.01"
            value="0.00"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/slider/demo/mark.md correctly 1`] = `
<div>
  <h4>
    included=true
  </h4>
  <div
    class="wmstool-slider wmstool-slider-with-marks"
  >
    <div
      class="wmstool-slider-rail"
    />
    <div
      class="wmstool-slider-track"
      style="visibility:visible;left:0%;width:37%"
    />
    <div
      class="wmstool-slider-step"
    >
      <span
        class="wmstool-slider-dot wmstool-slider-dot-active"
        style="left:0%"
      />
      <span
        class="wmstool-slider-dot wmstool-slider-dot-active"
        style="left:26%"
      />
      <span
        class="wmstool-slider-dot wmstool-slider-dot-active"
        style="left:37%"
      />
      <span
        class="wmstool-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="wmstool-slider-handle"
      role="slider"
      style="left:37%"
      tabindex="0"
    />
    <div
      class="wmstool-slider-mark"
    >
      <span
        class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%"
      >
        0°C
      </span>
      <span
        class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%"
      >
        26°C
      </span>
      <span
        class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%"
      >
        37°C
      </span>
      <span
        class="wmstool-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
  <div
    class="wmstool-slider wmstool-slider-with-marks"
  >
    <div
      class="wmstool-slider-rail"
    />
    <div
      class="wmstool-slider-track wmstool-slider-track-1"
      style="visibility:visible;left:26%;width:11%"
    />
    <div
      class="wmstool-slider-step"
    >
      <span
        class="wmstool-slider-dot"
        style="left:0%"
      />
      <span
        class="wmstool-slider-dot wmstool-slider-dot-active"
        style="left:26%"
      />
      <span
        class="wmstool-slider-dot wmstool-slider-dot-active"
        style="left:37%"
      />
      <span
        class="wmstool-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="26"
      class="wmstool-slider-handle wmstool-slider-handle-1"
      role="slider"
      style="left:26%"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="wmstool-slider-handle wmstool-slider-handle-2"
      role="slider"
      style="left:37%"
      tabindex="0"
    />
    <div
      class="wmstool-slider-mark"
    >
      <span
        class="wmstool-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%"
      >
        0°C
      </span>
      <span
        class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%"
      >
        26°C
      </span>
      <span
        class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%"
      >
        37°C
      </span>
      <span
        class="wmstool-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
  <h4>
    included=false
  </h4>
  <div
    class="wmstool-slider wmstool-slider-with-marks"
  >
    <div
      class="wmstool-slider-rail"
    />
    <div
      class="wmstool-slider-track"
      style="visibility:hidden;left:0%;width:37%"
    />
    <div
      class="wmstool-slider-step"
    >
      <span
        class="wmstool-slider-dot"
        style="left:0%"
      />
      <span
        class="wmstool-slider-dot"
        style="left:26%"
      />
      <span
        class="wmstool-slider-dot wmstool-slider-dot-active"
        style="left:37%"
      />
      <span
        class="wmstool-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="wmstool-slider-handle"
      role="slider"
      style="left:37%"
      tabindex="0"
    />
    <div
      class="wmstool-slider-mark"
    >
      <span
        class="wmstool-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%"
      >
        0°C
      </span>
      <span
        class="wmstool-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%"
      >
        26°C
      </span>
      <span
        class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%"
      >
        37°C
      </span>
      <span
        class="wmstool-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
  <h4>
    marks & step
  </h4>
  <div
    class="wmstool-slider wmstool-slider-with-marks"
  >
    <div
      class="wmstool-slider-rail"
    />
    <div
      class="wmstool-slider-track"
      style="visibility:visible;left:0%;width:37%"
    />
    <div
      class="wmstool-slider-step"
    >
      <span
        class="wmstool-slider-dot wmstool-slider-dot-active"
        style="left:0%"
      />
      <span
        class="wmstool-slider-dot wmstool-slider-dot-active"
        style="left:26%"
      />
      <span
        class="wmstool-slider-dot wmstool-slider-dot-active"
        style="left:37%"
      />
      <span
        class="wmstool-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="wmstool-slider-handle"
      role="slider"
      style="left:37%"
      tabindex="0"
    />
    <div
      class="wmstool-slider-mark"
    >
      <span
        class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%"
      >
        0°C
      </span>
      <span
        class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%"
      >
        26°C
      </span>
      <span
        class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%"
      >
        37°C
      </span>
      <span
        class="wmstool-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
  <h4>
    step=null
  </h4>
  <div
    class="wmstool-slider wmstool-slider-with-marks"
  >
    <div
      class="wmstool-slider-rail"
    />
    <div
      class="wmstool-slider-track"
      style="visibility:visible;left:0%;width:37%"
    />
    <div
      class="wmstool-slider-step"
    >
      <span
        class="wmstool-slider-dot wmstool-slider-dot-active"
        style="left:0%"
      />
      <span
        class="wmstool-slider-dot wmstool-slider-dot-active"
        style="left:26%"
      />
      <span
        class="wmstool-slider-dot wmstool-slider-dot-active"
        style="left:37%"
      />
      <span
        class="wmstool-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="wmstool-slider-handle"
      role="slider"
      style="left:37%"
      tabindex="0"
    />
    <div
      class="wmstool-slider-mark"
    >
      <span
        class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%"
      >
        0°C
      </span>
      <span
        class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%"
      >
        26°C
      </span>
      <span
        class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%"
      >
        37°C
      </span>
      <span
        class="wmstool-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/slider/demo/tip-formatter.md correctly 1`] = `
<div>
  <div
    class="wmstool-slider"
  >
    <div
      class="wmstool-slider-rail"
    />
    <div
      class="wmstool-slider-track"
      style="visibility:visible;left:0%;width:0%"
    />
    <div
      class="wmstool-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="wmstool-slider-handle"
      role="slider"
      style="left:0%"
      tabindex="0"
    />
    <div
      class="wmstool-slider-mark"
    />
  </div>
  <div
    class="wmstool-slider"
  >
    <div
      class="wmstool-slider-rail"
    />
    <div
      class="wmstool-slider-track"
      style="visibility:visible;left:0%;width:0%"
    />
    <div
      class="wmstool-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="wmstool-slider-handle"
      role="slider"
      style="left:0%"
      tabindex="0"
    />
    <div
      class="wmstool-slider-mark"
    />
  </div>
</div>
`;

exports[`renders ./components/slider/demo/vertical.md correctly 1`] = `
<div
  style="height:300px"
>
  <div
    style="float:left;height:300px;margin-left:70px"
  >
    <div
      class="wmstool-slider wmstool-slider-vertical"
    >
      <div
        class="wmstool-slider-rail"
      />
      <div
        class="wmstool-slider-track"
        style="visibility:visible;bottom:0%;height:30%"
      />
      <div
        class="wmstool-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="30"
        class="wmstool-slider-handle"
        role="slider"
        style="bottom:30%"
        tabindex="0"
      />
      <div
        class="wmstool-slider-mark"
      />
    </div>
  </div>
  <div
    style="float:left;height:300px;margin-left:70px"
  >
    <div
      class="wmstool-slider wmstool-slider-vertical"
    >
      <div
        class="wmstool-slider-rail"
      />
      <div
        class="wmstool-slider-track wmstool-slider-track-1"
        style="visibility:visible;bottom:20%;height:30%"
      />
      <div
        class="wmstool-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        class="wmstool-slider-handle wmstool-slider-handle-1"
        role="slider"
        style="bottom:20%"
        tabindex="0"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="wmstool-slider-handle wmstool-slider-handle-2"
        role="slider"
        style="bottom:50%"
        tabindex="0"
      />
      <div
        class="wmstool-slider-mark"
      />
    </div>
  </div>
  <div
    style="float:left;height:300px;margin-left:70px"
  >
    <div
      class="wmstool-slider wmstool-slider-with-marks wmstool-slider-vertical"
    >
      <div
        class="wmstool-slider-rail"
      />
      <div
        class="wmstool-slider-track wmstool-slider-track-1"
        style="visibility:visible;bottom:26%;height:11%"
      />
      <div
        class="wmstool-slider-step"
      >
        <span
          class="wmstool-slider-dot"
          style="bottom:0%"
        />
        <span
          class="wmstool-slider-dot wmstool-slider-dot-active"
          style="bottom:26%"
        />
        <span
          class="wmstool-slider-dot wmstool-slider-dot-active"
          style="bottom:37%"
        />
        <span
          class="wmstool-slider-dot"
          style="bottom:100%"
        />
      </div>
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="26"
        class="wmstool-slider-handle wmstool-slider-handle-1"
        role="slider"
        style="bottom:26%"
        tabindex="0"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="37"
        class="wmstool-slider-handle wmstool-slider-handle-2"
        role="slider"
        style="bottom:37%"
        tabindex="0"
      />
      <div
        class="wmstool-slider-mark"
      >
        <span
          class="wmstool-slider-mark-text"
          style="margin-bottom:-50%;bottom:0%"
        >
          0°C
        </span>
        <span
          class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
          style="margin-bottom:-50%;bottom:26%"
        >
          26°C
        </span>
        <span
          class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
          style="margin-bottom:-50%;bottom:37%"
        >
          37°C
        </span>
        <span
          class="wmstool-slider-mark-text"
          style="margin-bottom:-50%;bottom:100%;color:#f50"
        >
          <strong>
            100°C
          </strong>
        </span>
      </div>
    </div>
  </div>
</div>
`;
